# Toy-interpreter

./: .gitignore  Cargo.toml  README.md  code  code2  code3
.github/workflows/: rust.yml
bench/: Cargo.toml
bench/src/: bench.rs
examples/: grow_vector  hello_world  multiples_of_5_print  multiples_of_5_str
expr_eval/: Cargo.toml
expr_eval/src/: evaluator.rs  exprtoken_processor.rs  lib.rs  parser.rs  tokenizer.rs  val.rs
interpreter/: Cargo.toml
interpreter/src/: lib.rs  parser.rs  runtime.rs  tokenizer.rs
src/: main.rs  parser.rs  runtime.rs  tokenizer.rs  val.rs
src/expr_eval/: evaluator.rs  mod.rs  parser.rs  tokenizer.rs  val.rs
