[package]
name = "toy_interpreter"
version = "0.1.0"
authors = ["arturo"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
lazy_static = "1.4.0"
interpreter={path = "./interpreter"}
expr_eval={path = "./expr_eval"}

[profile.release]
debug = true
lto = true
codegen-units = 1

[workspace]
members = ["bench", "expr_eval", "interpreter"]
