[package]
name = "interpreter-benchs"
version = "0.1.0"
authors = ["Arturo <arturocs@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = "0.3.1"
interpreter = {path = "../interpreter" }
expr_eval = {path = "../expr_eval" }

[[bench]]
name = "interpreter"
harness = false
path = "src/bench.rs"

